# descriptor

./: CMakeLists.txt  README.md  bound_socket.cpp  bound_socket.h  can_socket.cpp  can_socket.h  datagram_socket.cpp  datagram_socket.h  descriptor.cpp  descriptor.h  local_datagram_socket.cpp  local_datagram_socket.h  local_stream_socket.cpp  local_stream_socket.h  socket.cpp  socket.h  stream_socket.cpp  stream_socket.h  tcp_socket.cpp  tcp_socket.h  udp_socket.cpp  udp_socket.h
example/: CMakeLists.txt
example/can-publisher/: CMakeLists.txt  main.cpp
example/can_subscriber/: CMakeLists.txt  main.cpp
example/local-datagram-client/: CMakeLists.txt  main.cpp
example/local-datagram-server/: CMakeLists.txt  main.cpp
example/local-stream-client/: CMakeLists.txt  main.cpp
example/local-stream-server/: CMakeLists.txt  main.cpp
example/tcp-client/: CMakeLists.txt  main.cpp
example/tcp-server/: CMakeLists.txt  main.cpp
example/udp-client/: CMakeLists.txt  main.cpp
example/udp-server/: CMakeLists.txt  main.cpp
